minor style fixes for mobile responsiveness - fixing display issue of footer bar on home screen on iphone5

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -122,6 +122,6 @@ h1 {
   }
 
 body.pages.home footer {
-  margin-bottom: -200px;
+  margin-bottom: -230px;
 }
 }
